[package]
name = "redis_cron"
version = "0.1.0"
authors = ["Prashanth Pai <mail@ppai.me>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
cron = "~0.8"
chrono = "~0.4"
uuid = { version = "~0.8", features = ["v4"] }
redis-module = { git="https://github.com/RedisLabsModules/redismodule-rs", features = ["experimental-api"]}
